// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Utils > Tauri API wrappers > tauriEmit > KeyStore.getKey() 1`] = `undefined`;

exports[`Utils > Tauri API wrappers > tauriEmit > Storage.get('ACCESS_TOKEN') 1`] = `null`;

exports[`Utils > Tauri API wrappers > tauriEmit > Storage.get('MENU_WIDTH') 1`] = `null`;

exports[`Utils > Tauri API wrappers > tauriEmit > Storage.get('THEME') 1`] = `null`;

exports[`Utils > Tauri API wrappers > tauriEmit > Storage.get('UPDATE_SEEN') 1`] = `null`;

exports[`Utils > Tauri API wrappers > tauriEmit > Storage.get('UPDATE_STRATEGY') 1`] = `null`;

exports[`Utils > Tauri API wrappers > tauriEmit > Storage.get('USERNAME') 1`] = `null`;

exports[`Utils > Tauri API wrappers > tauriEmit > allCalls 1`] = `
[
  [
    "emits",
    {
      "calledWith": {
        "data": {
          "is_logged_in": false,
        },
        "isFrontendEmit": true,
      },
      "name": "auth",
    },
  ],
]
`;

exports[`Utils > Tauri API wrappers > tauriEmit > document.body.outerHTML 1`] = `"<body class="theme--system"></body>"`;

exports[`Utils > Tauri API wrappers > tauriEmit > mockDb 1`] = `
{
  "deletedNotes": undefined,
  "encryptedNotes": [],
  "users": {
    "d": "1",
  },
}
`;

exports[`Utils > Tauri API wrappers > tauriEmit > noteState 1`] = `
{
  "addNotes": [Function],
  "extraSelectedNotes": [],
  "notes": [],
  "selectedNote": Note {
    "content": {
      "body": "",
      "delta": {
        "ops": [],
      },
      "title": "",
    },
    "timestamp": 0,
    "uuid": "uuid",
  },
}
`;

exports[`Utils > Tauri API wrappers > tauriEmit > openedPopup 1`] = `undefined`;

exports[`Utils > Tauri API wrappers > tauriEmit > selectedTheme 1`] = `"System"`;

exports[`Utils > Tauri API wrappers > tauriEmit > syncState 1`] = `
{
  "appError": AppError {
    "code": 0,
    "display": undefined,
    "message": undefined,
    "originalError": undefined,
    "retry": [Function],
    "retryConfig": undefined,
  },
  "encryptedNotesCache": Map {},
  "isLoggedIn": false,
  "loadingCount": 0,
  "newPassword": "",
  "password": "",
  "unsyncedNotes": UnsyncedNotesManager {
    "deleted": [],
    "edited": Set {},
    "new": "",
  },
  "username": "",
}
`;

exports[`Utils > Tauri API wrappers > tauriEmit > updateState 1`] = `
{
  "isAvailable": false,
  "isDownloading": false,
  "strategy": "manual",
}
`;

exports[`Utils > Tauri API wrappers > tauriInvoke > Calls invoke with correct command and args > KeyStore.getKey() 1`] = `undefined`;

exports[`Utils > Tauri API wrappers > tauriInvoke > Calls invoke with correct command and args > Storage.get('ACCESS_TOKEN') 1`] = `null`;

exports[`Utils > Tauri API wrappers > tauriInvoke > Calls invoke with correct command and args > Storage.get('MENU_WIDTH') 1`] = `null`;

exports[`Utils > Tauri API wrappers > tauriInvoke > Calls invoke with correct command and args > Storage.get('THEME') 1`] = `null`;

exports[`Utils > Tauri API wrappers > tauriInvoke > Calls invoke with correct command and args > Storage.get('UPDATE_SEEN') 1`] = `null`;

exports[`Utils > Tauri API wrappers > tauriInvoke > Calls invoke with correct command and args > Storage.get('UPDATE_STRATEGY') 1`] = `null`;

exports[`Utils > Tauri API wrappers > tauriInvoke > Calls invoke with correct command and args > Storage.get('USERNAME') 1`] = `null`;

exports[`Utils > Tauri API wrappers > tauriInvoke > Calls invoke with correct command and args > allCalls 1`] = `
[
  [
    "invoke",
    {
      "calledWith": {
        "uuid": "uuid",
      },
      "name": "delete_note",
    },
  ],
  [
    "invoke",
    {
      "calledWith": {},
      "name": "get_all_notes",
    },
  ],
]
`;

exports[`Utils > Tauri API wrappers > tauriInvoke > Calls invoke with correct command and args > document.body.outerHTML 1`] = `"<body class="theme--system"></body>"`;

exports[`Utils > Tauri API wrappers > tauriInvoke > Calls invoke with correct command and args > mockDb 1`] = `
{
  "deletedNotes": undefined,
  "encryptedNotes": [],
  "users": {
    "d": "1",
  },
}
`;

exports[`Utils > Tauri API wrappers > tauriInvoke > Calls invoke with correct command and args > noteState 1`] = `
{
  "addNotes": [Function],
  "extraSelectedNotes": [],
  "notes": [],
  "selectedNote": Note {
    "content": {
      "body": "",
      "delta": {
        "ops": [],
      },
      "title": "",
    },
    "timestamp": 0,
    "uuid": "uuid",
  },
}
`;

exports[`Utils > Tauri API wrappers > tauriInvoke > Calls invoke with correct command and args > openedPopup 1`] = `undefined`;

exports[`Utils > Tauri API wrappers > tauriInvoke > Calls invoke with correct command and args > selectedTheme 1`] = `"System"`;

exports[`Utils > Tauri API wrappers > tauriInvoke > Calls invoke with correct command and args > syncState 1`] = `
{
  "appError": AppError {
    "code": 0,
    "display": undefined,
    "message": undefined,
    "originalError": undefined,
    "retry": [Function],
    "retryConfig": undefined,
  },
  "encryptedNotesCache": Map {},
  "isLoggedIn": false,
  "loadingCount": 0,
  "newPassword": "",
  "password": "",
  "unsyncedNotes": UnsyncedNotesManager {
    "deleted": [],
    "edited": Set {},
    "new": "",
  },
  "username": "",
}
`;

exports[`Utils > Tauri API wrappers > tauriInvoke > Calls invoke with correct command and args > updateState 1`] = `
{
  "isAvailable": false,
  "isDownloading": false,
  "strategy": "manual",
}
`;

exports[`Utils > Tauri API wrappers > tauriInvoke > Catches errors and rethrows > KeyStore.getKey() 1`] = `undefined`;

exports[`Utils > Tauri API wrappers > tauriInvoke > Catches errors and rethrows > Storage.get('ACCESS_TOKEN') 1`] = `null`;

exports[`Utils > Tauri API wrappers > tauriInvoke > Catches errors and rethrows > Storage.get('MENU_WIDTH') 1`] = `null`;

exports[`Utils > Tauri API wrappers > tauriInvoke > Catches errors and rethrows > Storage.get('THEME') 1`] = `null`;

exports[`Utils > Tauri API wrappers > tauriInvoke > Catches errors and rethrows > Storage.get('UPDATE_SEEN') 1`] = `null`;

exports[`Utils > Tauri API wrappers > tauriInvoke > Catches errors and rethrows > Storage.get('UPDATE_STRATEGY') 1`] = `null`;

exports[`Utils > Tauri API wrappers > tauriInvoke > Catches errors and rethrows > Storage.get('USERNAME') 1`] = `null`;

exports[`Utils > Tauri API wrappers > tauriInvoke > Catches errors and rethrows > allCalls 1`] = `
[
  [
    "invoke",
    {
      "name": "delete_note",
    },
  ],
]
`;

exports[`Utils > Tauri API wrappers > tauriInvoke > Catches errors and rethrows > document.body.outerHTML 1`] = `"<body class="theme--system"></body>"`;

exports[`Utils > Tauri API wrappers > tauriInvoke > Catches errors and rethrows > mockDb 1`] = `
{
  "deletedNotes": undefined,
  "encryptedNotes": [],
  "users": {
    "d": "1",
  },
}
`;

exports[`Utils > Tauri API wrappers > tauriInvoke > Catches errors and rethrows > noteState 1`] = `
{
  "addNotes": [Function],
  "extraSelectedNotes": [],
  "notes": [],
  "selectedNote": Note {
    "content": {
      "body": "",
      "delta": {
        "ops": [],
      },
      "title": "",
    },
    "timestamp": 0,
    "uuid": "uuid",
  },
}
`;

exports[`Utils > Tauri API wrappers > tauriInvoke > Catches errors and rethrows > openedPopup 1`] = `undefined`;

exports[`Utils > Tauri API wrappers > tauriInvoke > Catches errors and rethrows > selectedTheme 1`] = `"System"`;

exports[`Utils > Tauri API wrappers > tauriInvoke > Catches errors and rethrows > syncState 1`] = `
{
  "appError": AppError {
    "code": 0,
    "display": undefined,
    "message": undefined,
    "originalError": undefined,
    "retry": [Function],
    "retryConfig": undefined,
  },
  "encryptedNotesCache": Map {},
  "isLoggedIn": false,
  "loadingCount": 0,
  "newPassword": "",
  "password": "",
  "unsyncedNotes": UnsyncedNotesManager {
    "deleted": [],
    "edited": Set {},
    "new": "",
  },
  "username": "",
}
`;

exports[`Utils > Tauri API wrappers > tauriInvoke > Catches errors and rethrows > updateState 1`] = `
{
  "isAvailable": false,
  "isDownloading": false,
  "strategy": "manual",
}
`;

exports[`Utils > Tauri API wrappers > tauriInvoke > Catches errors and retries > KeyStore.getKey() 1`] = `undefined`;

exports[`Utils > Tauri API wrappers > tauriInvoke > Catches errors and retries > Storage.get('ACCESS_TOKEN') 1`] = `null`;

exports[`Utils > Tauri API wrappers > tauriInvoke > Catches errors and retries > Storage.get('MENU_WIDTH') 1`] = `null`;

exports[`Utils > Tauri API wrappers > tauriInvoke > Catches errors and retries > Storage.get('THEME') 1`] = `null`;

exports[`Utils > Tauri API wrappers > tauriInvoke > Catches errors and retries > Storage.get('UPDATE_SEEN') 1`] = `null`;

exports[`Utils > Tauri API wrappers > tauriInvoke > Catches errors and retries > Storage.get('UPDATE_STRATEGY') 1`] = `null`;

exports[`Utils > Tauri API wrappers > tauriInvoke > Catches errors and retries > Storage.get('USERNAME') 1`] = `null`;

exports[`Utils > Tauri API wrappers > tauriInvoke > Catches errors and retries > allCalls 1`] = `
[
  [
    "invoke",
    {
      "name": "new_note",
    },
  ],
  [
    "tauriApi",
    {
      "calledWith": {
        "kind": "error",
        "message": "Failed to create note. Try again?",
        "title": "Create note",
      },
      "name": "plugin:dialog|ask",
    },
  ],
  [
    "invoke",
    {
      "name": "new_note",
    },
  ],
  [
    "tauriApi",
    {
      "calledWith": {
        "kind": "error",
        "message": "Failed to create note. Try again?",
        "title": "Create note",
      },
      "name": "plugin:dialog|ask",
    },
  ],
]
`;

exports[`Utils > Tauri API wrappers > tauriInvoke > Catches errors and retries > document.body.outerHTML 1`] = `"<body class="theme--system"></body>"`;

exports[`Utils > Tauri API wrappers > tauriInvoke > Catches errors and retries > mockDb 1`] = `
{
  "deletedNotes": undefined,
  "encryptedNotes": [],
  "users": {
    "d": "1",
  },
}
`;

exports[`Utils > Tauri API wrappers > tauriInvoke > Catches errors and retries > noteState 1`] = `
{
  "addNotes": [Function],
  "extraSelectedNotes": [],
  "notes": [],
  "selectedNote": Note {
    "content": {
      "body": "",
      "delta": {
        "ops": [],
      },
      "title": "",
    },
    "timestamp": 0,
    "uuid": "uuid",
  },
}
`;

exports[`Utils > Tauri API wrappers > tauriInvoke > Catches errors and retries > openedPopup 1`] = `undefined`;

exports[`Utils > Tauri API wrappers > tauriInvoke > Catches errors and retries > selectedTheme 1`] = `"System"`;

exports[`Utils > Tauri API wrappers > tauriInvoke > Catches errors and retries > syncState 1`] = `
{
  "appError": AppError {
    "code": 0,
    "display": undefined,
    "message": undefined,
    "originalError": undefined,
    "retry": [Function],
    "retryConfig": undefined,
  },
  "encryptedNotesCache": Map {},
  "isLoggedIn": false,
  "loadingCount": 0,
  "newPassword": "",
  "password": "",
  "unsyncedNotes": UnsyncedNotesManager {
    "deleted": [],
    "edited": Set {},
    "new": "",
  },
  "username": "",
}
`;

exports[`Utils > Tauri API wrappers > tauriInvoke > Catches errors and retries > updateState 1`] = `
{
  "isAvailable": false,
  "isDownloading": false,
  "strategy": "manual",
}
`;

exports[`Utils > Tauri API wrappers > tauriListen > KeyStore.getKey() 1`] = `undefined`;

exports[`Utils > Tauri API wrappers > tauriListen > Storage.get('ACCESS_TOKEN') 1`] = `null`;

exports[`Utils > Tauri API wrappers > tauriListen > Storage.get('MENU_WIDTH') 1`] = `null`;

exports[`Utils > Tauri API wrappers > tauriListen > Storage.get('THEME') 1`] = `null`;

exports[`Utils > Tauri API wrappers > tauriListen > Storage.get('UPDATE_SEEN') 1`] = `null`;

exports[`Utils > Tauri API wrappers > tauriListen > Storage.get('UPDATE_STRATEGY') 1`] = `null`;

exports[`Utils > Tauri API wrappers > tauriListen > Storage.get('USERNAME') 1`] = `null`;

exports[`Utils > Tauri API wrappers > tauriListen > allCalls 1`] = `
[
  [
    "listeners",
    {
      "name": "login",
    },
  ],
]
`;

exports[`Utils > Tauri API wrappers > tauriListen > document.body.outerHTML 1`] = `"<body class="theme--system"></body>"`;

exports[`Utils > Tauri API wrappers > tauriListen > mockDb 1`] = `
{
  "deletedNotes": undefined,
  "encryptedNotes": [],
  "users": {
    "d": "1",
  },
}
`;

exports[`Utils > Tauri API wrappers > tauriListen > noteState 1`] = `
{
  "addNotes": [Function],
  "extraSelectedNotes": [],
  "notes": [],
  "selectedNote": Note {
    "content": {
      "body": "",
      "delta": {
        "ops": [],
      },
      "title": "",
    },
    "timestamp": 0,
    "uuid": "uuid",
  },
}
`;

exports[`Utils > Tauri API wrappers > tauriListen > openedPopup 1`] = `undefined`;

exports[`Utils > Tauri API wrappers > tauriListen > selectedTheme 1`] = `"System"`;

exports[`Utils > Tauri API wrappers > tauriListen > syncState 1`] = `
{
  "appError": AppError {
    "code": 0,
    "display": undefined,
    "message": undefined,
    "originalError": undefined,
    "retry": [Function],
    "retryConfig": undefined,
  },
  "encryptedNotesCache": Map {},
  "isLoggedIn": false,
  "loadingCount": 0,
  "newPassword": "",
  "password": "",
  "unsyncedNotes": UnsyncedNotesManager {
    "deleted": [],
    "edited": Set {},
    "new": "",
  },
  "username": "",
}
`;

exports[`Utils > Tauri API wrappers > tauriListen > updateState 1`] = `
{
  "isAvailable": false,
  "isDownloading": false,
  "strategy": "manual",
}
`;

exports[`Utils > capitalise > KeyStore.getKey() 1`] = `undefined`;

exports[`Utils > capitalise > Storage.get('ACCESS_TOKEN') 1`] = `null`;

exports[`Utils > capitalise > Storage.get('MENU_WIDTH') 1`] = `null`;

exports[`Utils > capitalise > Storage.get('THEME') 1`] = `null`;

exports[`Utils > capitalise > Storage.get('UPDATE_SEEN') 1`] = `null`;

exports[`Utils > capitalise > Storage.get('UPDATE_STRATEGY') 1`] = `null`;

exports[`Utils > capitalise > Storage.get('USERNAME') 1`] = `null`;

exports[`Utils > capitalise > allCalls 1`] = `[]`;

exports[`Utils > capitalise > document.body.outerHTML 1`] = `"<body class="theme--system"></body>"`;

exports[`Utils > capitalise > mockDb 1`] = `
{
  "deletedNotes": undefined,
  "encryptedNotes": [],
  "users": {
    "d": "1",
  },
}
`;

exports[`Utils > capitalise > noteState 1`] = `
{
  "addNotes": [Function],
  "extraSelectedNotes": [],
  "notes": [],
  "selectedNote": Note {
    "content": {
      "body": "",
      "delta": {
        "ops": [],
      },
      "title": "",
    },
    "timestamp": 0,
    "uuid": "uuid",
  },
}
`;

exports[`Utils > capitalise > openedPopup 1`] = `undefined`;

exports[`Utils > capitalise > selectedTheme 1`] = `"System"`;

exports[`Utils > capitalise > syncState 1`] = `
{
  "appError": AppError {
    "code": 0,
    "display": undefined,
    "message": undefined,
    "originalError": undefined,
    "retry": [Function],
    "retryConfig": undefined,
  },
  "encryptedNotesCache": Map {},
  "isLoggedIn": false,
  "loadingCount": 0,
  "newPassword": "",
  "password": "",
  "unsyncedNotes": UnsyncedNotesManager {
    "deleted": [],
    "edited": Set {},
    "new": "",
  },
  "username": "",
}
`;

exports[`Utils > capitalise > updateState 1`] = `
{
  "isAvailable": false,
  "isDownloading": false,
  "strategy": "manual",
}
`;

exports[`Utils > escapeRegex > KeyStore.getKey() 1`] = `undefined`;

exports[`Utils > escapeRegex > Storage.get('ACCESS_TOKEN') 1`] = `null`;

exports[`Utils > escapeRegex > Storage.get('MENU_WIDTH') 1`] = `null`;

exports[`Utils > escapeRegex > Storage.get('THEME') 1`] = `null`;

exports[`Utils > escapeRegex > Storage.get('UPDATE_SEEN') 1`] = `null`;

exports[`Utils > escapeRegex > Storage.get('UPDATE_STRATEGY') 1`] = `null`;

exports[`Utils > escapeRegex > Storage.get('USERNAME') 1`] = `null`;

exports[`Utils > escapeRegex > allCalls 1`] = `[]`;

exports[`Utils > escapeRegex > document.body.outerHTML 1`] = `"<body class="theme--system"></body>"`;

exports[`Utils > escapeRegex > mockDb 1`] = `
{
  "deletedNotes": undefined,
  "encryptedNotes": [],
  "users": {
    "d": "1",
  },
}
`;

exports[`Utils > escapeRegex > noteState 1`] = `
{
  "addNotes": [Function],
  "extraSelectedNotes": [],
  "notes": [],
  "selectedNote": Note {
    "content": {
      "body": "",
      "delta": {
        "ops": [],
      },
      "title": "",
    },
    "timestamp": 0,
    "uuid": "uuid",
  },
}
`;

exports[`Utils > escapeRegex > openedPopup 1`] = `undefined`;

exports[`Utils > escapeRegex > selectedTheme 1`] = `"System"`;

exports[`Utils > escapeRegex > syncState 1`] = `
{
  "appError": AppError {
    "code": 0,
    "display": undefined,
    "message": undefined,
    "originalError": undefined,
    "retry": [Function],
    "retryConfig": undefined,
  },
  "encryptedNotesCache": Map {},
  "isLoggedIn": false,
  "loadingCount": 0,
  "newPassword": "",
  "password": "",
  "unsyncedNotes": UnsyncedNotesManager {
    "deleted": [],
    "edited": Set {},
    "new": "",
  },
  "username": "",
}
`;

exports[`Utils > escapeRegex > updateState 1`] = `
{
  "isAvailable": false,
  "isDownloading": false,
  "strategy": "manual",
}
`;

exports[`Utils > hasKeys > KeyStore.getKey() 1`] = `undefined`;

exports[`Utils > hasKeys > Storage.get('ACCESS_TOKEN') 1`] = `null`;

exports[`Utils > hasKeys > Storage.get('MENU_WIDTH') 1`] = `null`;

exports[`Utils > hasKeys > Storage.get('THEME') 1`] = `null`;

exports[`Utils > hasKeys > Storage.get('UPDATE_SEEN') 1`] = `null`;

exports[`Utils > hasKeys > Storage.get('UPDATE_STRATEGY') 1`] = `null`;

exports[`Utils > hasKeys > Storage.get('USERNAME') 1`] = `null`;

exports[`Utils > hasKeys > allCalls 1`] = `[]`;

exports[`Utils > hasKeys > document.body.outerHTML 1`] = `"<body class="theme--system"></body>"`;

exports[`Utils > hasKeys > mockDb 1`] = `
{
  "deletedNotes": undefined,
  "encryptedNotes": [],
  "users": {
    "d": "1",
  },
}
`;

exports[`Utils > hasKeys > noteState 1`] = `
{
  "addNotes": [Function],
  "extraSelectedNotes": [],
  "notes": [],
  "selectedNote": Note {
    "content": {
      "body": "",
      "delta": {
        "ops": [],
      },
      "title": "",
    },
    "timestamp": 0,
    "uuid": "uuid",
  },
}
`;

exports[`Utils > hasKeys > openedPopup 1`] = `undefined`;

exports[`Utils > hasKeys > selectedTheme 1`] = `"System"`;

exports[`Utils > hasKeys > syncState 1`] = `
{
  "appError": AppError {
    "code": 0,
    "display": undefined,
    "message": undefined,
    "originalError": undefined,
    "retry": [Function],
    "retryConfig": undefined,
  },
  "encryptedNotesCache": Map {},
  "isLoggedIn": false,
  "loadingCount": 0,
  "newPassword": "",
  "password": "",
  "unsyncedNotes": UnsyncedNotesManager {
    "deleted": [],
    "edited": Set {},
    "new": "",
  },
  "username": "",
}
`;

exports[`Utils > hasKeys > updateState 1`] = `
{
  "isAvailable": false,
  "isDownloading": false,
  "strategy": "manual",
}
`;

exports[`Utils > isDev > KeyStore.getKey() 1`] = `undefined`;

exports[`Utils > isDev > Storage.get('ACCESS_TOKEN') 1`] = `null`;

exports[`Utils > isDev > Storage.get('MENU_WIDTH') 1`] = `null`;

exports[`Utils > isDev > Storage.get('THEME') 1`] = `null`;

exports[`Utils > isDev > Storage.get('UPDATE_SEEN') 1`] = `null`;

exports[`Utils > isDev > Storage.get('UPDATE_STRATEGY') 1`] = `null`;

exports[`Utils > isDev > Storage.get('USERNAME') 1`] = `null`;

exports[`Utils > isDev > allCalls 1`] = `[]`;

exports[`Utils > isDev > document.body.outerHTML 1`] = `"<body class="theme--system"></body>"`;

exports[`Utils > isDev > mockDb 1`] = `
{
  "deletedNotes": undefined,
  "encryptedNotes": [],
  "users": {
    "d": "1",
  },
}
`;

exports[`Utils > isDev > noteState 1`] = `
{
  "addNotes": [Function],
  "extraSelectedNotes": [],
  "notes": [],
  "selectedNote": Note {
    "content": {
      "body": "",
      "delta": {
        "ops": [],
      },
      "title": "",
    },
    "timestamp": 0,
    "uuid": "uuid",
  },
}
`;

exports[`Utils > isDev > openedPopup 1`] = `undefined`;

exports[`Utils > isDev > selectedTheme 1`] = `"System"`;

exports[`Utils > isDev > syncState 1`] = `
{
  "appError": AppError {
    "code": 0,
    "display": undefined,
    "message": undefined,
    "originalError": undefined,
    "retry": [Function],
    "retryConfig": undefined,
  },
  "encryptedNotesCache": Map {},
  "isLoggedIn": false,
  "loadingCount": 0,
  "newPassword": "",
  "password": "",
  "unsyncedNotes": UnsyncedNotesManager {
    "deleted": [],
    "edited": Set {},
    "new": "",
  },
  "username": "",
}
`;

exports[`Utils > isDev > updateState 1`] = `
{
  "isAvailable": false,
  "isDownloading": false,
  "strategy": "manual",
}
`;

exports[`Utils > isEmptyNote > KeyStore.getKey() 1`] = `undefined`;

exports[`Utils > isEmptyNote > Storage.get('ACCESS_TOKEN') 1`] = `null`;

exports[`Utils > isEmptyNote > Storage.get('MENU_WIDTH') 1`] = `null`;

exports[`Utils > isEmptyNote > Storage.get('THEME') 1`] = `null`;

exports[`Utils > isEmptyNote > Storage.get('UPDATE_SEEN') 1`] = `null`;

exports[`Utils > isEmptyNote > Storage.get('UPDATE_STRATEGY') 1`] = `null`;

exports[`Utils > isEmptyNote > Storage.get('USERNAME') 1`] = `null`;

exports[`Utils > isEmptyNote > allCalls 1`] = `[]`;

exports[`Utils > isEmptyNote > document.body.outerHTML 1`] = `"<body class="theme--system"></body>"`;

exports[`Utils > isEmptyNote > mockDb 1`] = `
{
  "deletedNotes": undefined,
  "encryptedNotes": [],
  "users": {
    "d": "1",
  },
}
`;

exports[`Utils > isEmptyNote > noteState 1`] = `
{
  "addNotes": [Function],
  "extraSelectedNotes": [],
  "notes": [],
  "selectedNote": Note {
    "content": {
      "body": "",
      "delta": {
        "ops": [],
      },
      "title": "",
    },
    "timestamp": 0,
    "uuid": "uuid",
  },
}
`;

exports[`Utils > isEmptyNote > openedPopup 1`] = `undefined`;

exports[`Utils > isEmptyNote > selectedTheme 1`] = `"System"`;

exports[`Utils > isEmptyNote > syncState 1`] = `
{
  "appError": AppError {
    "code": 0,
    "display": undefined,
    "message": undefined,
    "originalError": undefined,
    "retry": [Function],
    "retryConfig": undefined,
  },
  "encryptedNotesCache": Map {},
  "isLoggedIn": false,
  "loadingCount": 0,
  "newPassword": "",
  "password": "",
  "unsyncedNotes": UnsyncedNotesManager {
    "deleted": [],
    "edited": Set {},
    "new": "",
  },
  "username": "",
}
`;

exports[`Utils > isEmptyNote > updateState 1`] = `
{
  "isAvailable": false,
  "isDownloading": false,
  "strategy": "manual",
}
`;

exports[`Utils > isWhitespaceOnly > KeyStore.getKey() 1`] = `undefined`;

exports[`Utils > isWhitespaceOnly > Storage.get('ACCESS_TOKEN') 1`] = `null`;

exports[`Utils > isWhitespaceOnly > Storage.get('MENU_WIDTH') 1`] = `null`;

exports[`Utils > isWhitespaceOnly > Storage.get('THEME') 1`] = `null`;

exports[`Utils > isWhitespaceOnly > Storage.get('UPDATE_SEEN') 1`] = `null`;

exports[`Utils > isWhitespaceOnly > Storage.get('UPDATE_STRATEGY') 1`] = `null`;

exports[`Utils > isWhitespaceOnly > Storage.get('USERNAME') 1`] = `null`;

exports[`Utils > isWhitespaceOnly > allCalls 1`] = `[]`;

exports[`Utils > isWhitespaceOnly > document.body.outerHTML 1`] = `"<body class="theme--system"></body>"`;

exports[`Utils > isWhitespaceOnly > mockDb 1`] = `
{
  "deletedNotes": undefined,
  "encryptedNotes": [],
  "users": {
    "d": "1",
  },
}
`;

exports[`Utils > isWhitespaceOnly > noteState 1`] = `
{
  "addNotes": [Function],
  "extraSelectedNotes": [],
  "notes": [],
  "selectedNote": Note {
    "content": {
      "body": "",
      "delta": {
        "ops": [],
      },
      "title": "",
    },
    "timestamp": 0,
    "uuid": "uuid",
  },
}
`;

exports[`Utils > isWhitespaceOnly > openedPopup 1`] = `undefined`;

exports[`Utils > isWhitespaceOnly > selectedTheme 1`] = `"System"`;

exports[`Utils > isWhitespaceOnly > syncState 1`] = `
{
  "appError": AppError {
    "code": 0,
    "display": undefined,
    "message": undefined,
    "originalError": undefined,
    "retry": [Function],
    "retryConfig": undefined,
  },
  "encryptedNotesCache": Map {},
  "isLoggedIn": false,
  "loadingCount": 0,
  "newPassword": "",
  "password": "",
  "unsyncedNotes": UnsyncedNotesManager {
    "deleted": [],
    "edited": Set {},
    "new": "",
  },
  "username": "",
}
`;

exports[`Utils > isWhitespaceOnly > updateState 1`] = `
{
  "isAvailable": false,
  "isDownloading": false,
  "strategy": "manual",
}
`;

exports[`Utils > unixToDateTime > KeyStore.getKey() 1`] = `undefined`;

exports[`Utils > unixToDateTime > Storage.get('ACCESS_TOKEN') 1`] = `null`;

exports[`Utils > unixToDateTime > Storage.get('MENU_WIDTH') 1`] = `null`;

exports[`Utils > unixToDateTime > Storage.get('THEME') 1`] = `null`;

exports[`Utils > unixToDateTime > Storage.get('UPDATE_SEEN') 1`] = `null`;

exports[`Utils > unixToDateTime > Storage.get('UPDATE_STRATEGY') 1`] = `null`;

exports[`Utils > unixToDateTime > Storage.get('USERNAME') 1`] = `null`;

exports[`Utils > unixToDateTime > allCalls 1`] = `[]`;

exports[`Utils > unixToDateTime > document.body.outerHTML 1`] = `"<body class="theme--system"></body>"`;

exports[`Utils > unixToDateTime > mockDb 1`] = `
{
  "deletedNotes": undefined,
  "encryptedNotes": [],
  "users": {
    "d": "1",
  },
}
`;

exports[`Utils > unixToDateTime > noteState 1`] = `
{
  "addNotes": [Function],
  "extraSelectedNotes": [],
  "notes": [],
  "selectedNote": Note {
    "content": {
      "body": "",
      "delta": {
        "ops": [],
      },
      "title": "",
    },
    "timestamp": 0,
    "uuid": "uuid",
  },
}
`;

exports[`Utils > unixToDateTime > openedPopup 1`] = `undefined`;

exports[`Utils > unixToDateTime > selectedTheme 1`] = `"System"`;

exports[`Utils > unixToDateTime > syncState 1`] = `
{
  "appError": AppError {
    "code": 0,
    "display": undefined,
    "message": undefined,
    "originalError": undefined,
    "retry": [Function],
    "retryConfig": undefined,
  },
  "encryptedNotesCache": Map {},
  "isLoggedIn": false,
  "loadingCount": 0,
  "newPassword": "",
  "password": "",
  "unsyncedNotes": UnsyncedNotesManager {
    "deleted": [],
    "edited": Set {},
    "new": "",
  },
  "username": "",
}
`;

exports[`Utils > unixToDateTime > updateState 1`] = `
{
  "isAvailable": false,
  "isDownloading": false,
  "strategy": "manual",
}
`;
